<resources>
    <string name="app_name">LoadAppNanoProject</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="button_name">Click me</string>
    <string name="button_loading">Downloading file</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="download">Download</string>
    <string name="close">Close</string>
    <string name="radio_button_glide_text">Glide</string>
    <string name="radio_button_loadapp_text">Load App</string>
    <string name="radio_button_retrofit_text">Retrofit</string>
    <string name="no_network_available">No network avaialble</string>
    <string name="select_something">Please Select one of the download options</string>
</resources>

