<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_details_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/fileNameTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/file_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fileStatusTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/fileNameTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/fileNameTitleTextView" />

    <TextView
        android:id="@+id/fileNameValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/fileNameTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/fileNameTitleTextView"
        app:layout_constraintTop_toTopOf="@id/fileNameTitleTextView" />

    <TextView
        android:id="@+id/fileStatusValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/fileNameValueTextView"
        app:layout_constraintTop_toBottomOf="@id/fileStatusTitleTextView"
        app:layout_constraintTop_toTopOf="@id/fileStatusTitleTextView" />

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/close"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>