<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/downloadImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:minHeight="200dp"
        android:src="@drawable/ic_baseline_cloud_download_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorPrimary" />

    <RadioGroup
        android:id="@+id/download_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadImageView">

        <RadioButton
            android:id="@+id/glide_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_glide_text"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/udacity_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_loadapp_text"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/retrofit_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_retrofit_text"
            android:textSize="20sp" />

    </RadioGroup>



    <com.eslam.loadApp.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="36dp"
        app:buttonColor="@color/colorPrimary"
        app:buttonLoadingColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:loadingCircleColor="@color/colorAccent" />

</androidx.constraintlayout.widget.ConstraintLayout>